remove MaxPermSize since we're targeting Java 8