@@ -184,9 +184,7 @@ then
         # Ensure that the tmp directory exists
         mkdir -p $TMP_DIR
 
-        JAVA_OPTS="$JAVA_OPTS \
-                    -Xmx512m \
-                    -XX:MaxPermSize=512m"
+        JAVA_OPTS="$JAVA_OPTS -Xmx512m"
 
         cd $KERNEL_HOME; exec $JAVA_EXECUTABLE \
             $JAVA_OPTS \
